k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-digest-deployment
  labels:
    app: finance-digest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-digest
  template:
    metadata:
      labels:
        app: finance-digest
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: finance-digest
          image: 671022928530.dkr.ecr.eu-west-2.amazonaws.com/devadeboye/finance-digest:0.1.1
          imagePullPolicy: Always
          ports:
          - containerPort: 3001
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
