k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-digest-ingress
  labels:
    app: finance-digest
spec:
  ingressClassName: traefik
  rules:
    - host: finance-digest.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance-digest-service
                port:
                  number: 81
